# simone

./: 404.html  CMakeLists.txt  Doxyfile  README.md  example_v1.c  example_v2.c  example_v3.c  fsm_button.c  fsm_button.h  fsm_display.c  fsm_display.h  fsm_keyboard.c  fsm_keyboard.h  fsm_rgb_light.c  fsm_rgb_light.h  fsm_ultrasound.c  fsm_ultrasound.h  index.html  keyboards.c  keyboards.h  main.c  port_button.h  port_display.h  port_keyboard.h  port_rgb_light.h  port_ultrasound.h  rgb_colors.c  rgb_colors.h  sitemap.xml  stm32f4_button.c  stm32f4_button.h  stm32f4_display.c  stm32f4_display.h  stm32f4_keyboard.c  stm32f4_keyboard.h  stm32f4_rgb_light.c  stm32f4_rgb_light.h  stm32f4_ultrasound.c  stm32f4_ultrasound.h  test_fsm_button.c  (+12 more)
api/: annotated.html  annotated_dup.js  classes.html  custom-nav.js  dir_11fbc4217d50ab21044e5ad6614aede5.html  dir_11fbc4217d50ab21044e5ad6614aede5.js  dir_3b4aa3705552218a151a51dac694657d.html  dir_3b4aa3705552218a151a51dac694657d.js  dir_4e4d22e38ca4e2e8207825ee2d00bc54.html  dir_4e4d22e38ca4e2e8207825ee2d00bc54.js  dir_651562d8bf6cfd3e81eff5b570d7df50.html  dir_651562d8bf6cfd3e81eff5b570d7df50.js  dir_8338216af5b9c682f75cf365d3e92719.html  dir_8338216af5b9c682f75cf365d3e92719.js  dir_96ea3e7ce74ccff9e7229beeb516906f.html  dir_96ea3e7ce74ccff9e7229beeb516906f.js  dir_aff93352f483d815f4aad2ce8569e33b.html  dir_bdd9a5d540de89e9fe90efdfc6973a4f.html  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.html  doxygen-custom.css  files.html  fsm__button_8c.html  fsm__button_8c.js  fsm__button_8h.html  fsm__button_8h.js  fsm__keyboard_8c.html  fsm__keyboard_8c.js  fsm__keyboard_8h.html  fsm__keyboard_8h.js  fsm__rgb__light_8c.html  fsm__rgb__light_8c.js  fsm__rgb__light_8h.html  fsm__rgb__light_8h.js  fsm__simone_8c.html  fsm__simone_8c.js  fsm__simone_8h.html  fsm__simone_8h.js  functions.html  functions_vars.html  globals.html  (+103 more)
api/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  defines_c.js  enums_0.js  enums_1.js  (+44 more)
assets/notebook_imgs/: sdg2_25-26_drawio_diagrams.drawio
assets/notebook_imgs/fritzing/: simone.fzz  simone_keyboard.fzz  simone_rgb.fzz
common/: CMakeLists.txt
example/: CMakeLists.txt
notebook/: acronimos.html  bibliography.bib  bom.html  index.html  intro.html  proyecto_base.html  rubrica_tbl.html  sesion_introduccion.html  version_0.html  version_1.html  version_2.html  version_2_old.html  version_3.html  version_4.html  version_4_old.html  version_5.html
notebook/acronimos/: index.html
notebook/bom/: index.html
notebook/intro/: index.html
notebook/proyecto_base/: index.html
notebook/rubrica_tbl/: index.html
notebook/sesion_introduccion/: index.html
notebook/version_1/: index.html
notebook/version_2/: index.html
notebook/version_3/: index.html
notebook/version_4/: index.html
notebook/version_4_old/: index.html
notebook/version_5/: index.html
port/: CMakeLists.txt
port/include/: port_system.h
port/stm32f4/: CMakeLists.txt
port/stm32f4/include/: stm32f4_system.h
port/stm32f4/src/: interr.c  stm32f4_system.c  syscalls.c
search/: search_index.json
stylesheets/: doxygen-awesome.css  notebook-extra.css
test/: CMakeLists.txt
test/stm32f4/: CMakeLists.txt  test_template.c
